# seestar-tool

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/icons/: seestar-tool.icns
src/: apk.rs  apkpure.rs  firmware.rs  gui.rs  main.rs  runner.rs  task.rs  tui.rs
