[package]
name = "seestar-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "cookies"] }
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rfd = "0.15"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
dirs = "5"
md5 = "0.7"
futures-util = "0.3"

[lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_mut = "deny"
unused_parens = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
empty_line_after_doc_comments = "deny"

[profile.release]
opt-level = 3
strip = true
